--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@gluestack-style/react": "latest",
     "@gluestack-ui/themed": "latest",
     "@legendapp/motion": "latest",
+    "axios": "^1.5.1",
     "expo": "^49.0.13",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
+    "i18next": "^23.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
