--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "jsx":"react",
+    "strict": true,
+  "paths": {
+    "react": ["./node_modules/@types/react"],
+  }
   }
 }
