--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gluestack-style/react": "latest",
     "@gluestack-ui/themed": "latest",
     "@legendapp/motion": "latest",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "expo": "^49.0.13",
     "expo-constants": "~14.4.2",
@@ -31,12 +32,14 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.6.2"
+    "react-native-webview": "^13.6.2",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/webpack-config": "^0.12.52",
     "@types/react": "~18.0.14",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
