--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "jsx":"react",
+    "jsx": "react",
     "strict": true,
-  "paths": {
-    "react": ["./node_modules/@types/react"],
-  }
+    "paths": {
+      "react": [
+        "./node_modules/@types/react"
+      ],
+      "~*": [
+        "./*"
+      ],
+    }
   }
 }
