--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.6.2",
     "react-redux": "^8.1.3"
