--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.1",
     "expo": "^49.0.13",
     "expo-constants": "~14.4.2",
+    "expo-image-picker": "^14.5.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
@@ -25,20 +26,22 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.2",
-    "react-native": "0.72.3",
+    "react-native": "0.72.5",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.6.2",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^0.12.52",
-    "@types/react": "~18.0.14",
+    "@expo/webpack-config": "^19.0.0",
+    "@types/react": "~18.2.14",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
