--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +17,8 @@
     "axios": "^1.5.1",
     "expo": "^49.0.13",
     "expo-constants": "~14.4.2",
-    "expo-image-picker": "^14.5.0",
+    "expo-dev-client": "~2.4.11",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
@@ -36,7 +37,8 @@
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
