--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --tunnel",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prebuild": "expo prebuild"
   },
   "dependencies": {
     "@expo/html-elements": "latest",
