--- a/package.json
+++ b/package.json
@@ -4,24 +4,29 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start --tunnel",
+    "start:cache": "expo start --reset-cache",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "prebuild": "expo prebuild"
+    "prebuild": "expo prebuild",
+    "clear:cache": "expo r -c"
   },
   "dependencies": {
     "@expo/html-elements": "latest",
     "@gluestack-style/react": "latest",
     "@gluestack-ui/themed": "latest",
     "@legendapp/motion": "latest",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "expo": "^49.0.13",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "i18next": "^23.5.1",
@@ -39,7 +44,7 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-redux": "^8.1.3",
-    "expo-splash-screen": "~0.20.5"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
