--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "prebuild": "expo prebuild",
+    "build:ios": "expo build:ios",
+    "build:android": "expo build:android",
+    "build:web": "expo build:web",
+    "build:all": "expo build:all",
     "clear:cache": "expo r -c"
   },
   "dependencies": {
@@ -17,6 +21,9 @@
     "@gluestack-ui/themed": "latest",
     "@legendapp/motion": "latest",
     "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/messaging": "^18.5.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
@@ -36,6 +43,7 @@
     "react-native": "0.72.5",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
@@ -50,6 +58,7 @@
     "@babel/core": "^7.20.0",
     "@expo/webpack-config": "^19.0.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-push-notification": "^8.1.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
