--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo": "^49.0.13",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
+    "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
