--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
     "expo": "^49.0.13",
+    "expo-application": "~5.3.0",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
