--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native": "0.72.5",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-render-html": "^6.3.4",
