--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "prebuild": "expo prebuild",
+    "prebuild": "expo prebuild  --configuration Release",
     "build:ios": "expo build:ios",
     "build:android": "expo build:android",
     "build:web": "expo build:web",
@@ -32,11 +32,15 @@
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
     "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.16",
     "formik": "^2.4.5",
     "i18next": "^23.5.1",
     "react": "18.2.0",
@@ -45,6 +49,7 @@
     "react-native": "0.72.5",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
