--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
+    "react-native-x-carousel": "^1.0.1",
     "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
