--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "prebuild": "expo prebuild  --configuration Release",
+    "prebuild": "expo prebuild",
     "build:ios": "expo build:ios",
     "build:android": "expo build:android",
     "build:web": "expo build:web",
@@ -59,7 +59,6 @@
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
-    "react-native-x-carousel": "^1.0.1",
     "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
