--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-i18next": "^13.2.2",
     "react-native": "0.72.5",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
