add markdown renderer lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
       "~*": [
         "./*"
       ],
-    }
+    },
+    "typeRoots": [
+      "./typings",
+      "./node_modules/@types"
+    ]
   }
 }
