--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
-    "react-native-markdown-renderer": "^3.2.8",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-modal": "^13.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
