--- a/ios/turistikrota/Info.plist
+++ b/ios/turistikrota/Info.plist
@@ -39,7 +39,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>1</string>
+    <string>0.0.3</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSAppTransportSecurity</key>
@@ -56,19 +56,21 @@
       </dict>
     </dict>
     <key>NSCameraUsageDescription</key>
-    <string>Allow $(PRODUCT_NAME) to access your camera</string>
+    <string>Profil resminizi yüklemek için kameraya erişim izni isteriz. İzin vermezseniz sadece fotoğraf yükleyemezsiniz.</string>
     <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>Allow $(PRODUCT_NAME) to access your location</string>
+    <string>Yakındaki turistik yerleri göstermek için konum izni isteriz. İzin vermezseniz varsayılan lokasyonlar kullanılır.</string>
     <key>NSLocationAlwaysUsageDescription</key>
-    <string>Allow $(PRODUCT_NAME) to access your location</string>
+    <string>Yakındaki turistik yerleri göstermek için konum izni isteriz. İzin vermezseniz varsayılan lokasyonlar kullanılır.</string>
     <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Allow $(PRODUCT_NAME) to access your location</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>Allow $(PRODUCT_NAME) to access your microphone</string>
+    <string>Yakındaki turistik yerleri göstermek için konum izni isteriz. İzin vermezseniz varsayılan lokasyonlar kullanılır.</string>
     <key>NSPhotoLibraryUsageDescription</key>
-    <string>The app optionally accesses your gallery to select your profile photo.</string>
+    <string>Profil resminizi yüklemek için galeriye erişim izni isteriz. İzin vermezseniz sadece fotoğraf yükleyemezsiniz.</string>
     <key>NSUserActivityTypes</key>
     <array>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
