fix the old types

--- a/ios/turistikrota/Info.plist
+++ b/ios/turistikrota/Info.plist
@@ -39,7 +39,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>0.0.3</string>
+    <string>0.0.4</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSAppTransportSecurity</key>
@@ -67,6 +67,7 @@
     <string>Profil resminizi yüklemek için galeriye erişim izni isteriz. İzin vermezseniz sadece fotoğraf yükleyemezsiniz.</string>
     <key>NSUserActivityTypes</key>
     <array>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
